--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -46,6 +46,7 @@
     <Compile Include="PartitionOp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryBasics.cs" />
     <Compile Include="SortingOP.cs" />
   </ItemGroup>
   <ItemGroup>
