Add Element Operations

--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConvertionOp.cs" />
+    <Compile Include="ElementOp.cs" />
     <Compile Include="PartitionOp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
