--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Delegates.cs" />
     <Compile Include="ElementOp.cs" />
     <Compile Include="EmployeeManagement.cs" />
+    <Compile Include="Joins.cs" />
     <Compile Include="PartitionOp.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
